# PathTracer

./: .clang-format  .copilot-instructions.md  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  PathTracer_sln.sharpmake.cs  README.md  generate_projects.bat  shadertoolsconfig.json
.copilot/: copilot-instructions.md
.github/skills/code-review/: SKILL.md
PathTracer/: CMakeLists.txt  PathTracer.cpp  PathTracer.h  PathTracer.sharpmake.cs  PathTracer_main.cpp  Sky.cpp  Sky.h  Sky_Imgui.cpp  Sky_Imgui.h
resources/models/: CornellBox.mtl  Cycles.mtl
resources/shaders/: clear_texture.hlsl  render_sky.hlsl  tonemap_composit.hlsl  unlit_mesh.hlsl
resources/shaders/raytracing/: Ao.hlsl  Common.hlsl  Hit.hlsl  Miss.hlsl  PathTracing.hlsl  Random.hlsl  RayGen.hlsl  SampleSky.hlsl  brdfSampling.hlsl
resources/shaders/sky/: Common.hlsl  Common_Functions.hlsl  RenderSkyCommon.hlsl  RenderSkyRayMarching.hlsl  SkyAtmosphereCommon.hlsl  SkyDefinitions_Bruneton17.hlsl  compute_skyView_lut.hlsl  compute_transmittance_lut.hlsl
